[gd_scene load_steps=29 format=3 uid="uid://bjsa08515exsn"]

[ext_resource type="PackedScene" uid="uid://qbmx03iibuuu" path="res://addons/godot-xr-tools/staging/scene_base.tscn" id="1_p4omq"]
[ext_resource type="PackedScene" uid="uid://b4kad2kuba1yn" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="2_b63d7"]
[ext_resource type="Script" path="res://Scenes/level_1.gd" id="2_nmgh6"]
[ext_resource type="PackedScene" uid="uid://fiul51tsyoop" path="res://addons/godot-xr-tools/functions/function_teleport.tscn" id="3_k8npn"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="4_y8n25"]
[ext_resource type="PackedScene" uid="uid://l2n30mpbkdyw" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="5_wrtkv"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="6_c2qen"]
[ext_resource type="PackedScene" uid="uid://3ofvrruq1m6v" path="res://Scenes/UI/UIDisplay.tscn" id="6_gbv02"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="7_ccdse"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="9_cj5nx"]
[ext_resource type="PackedScene" uid="uid://bod2b5t285h1a" path="res://Scenes/Things/dysk.tscn" id="10_p2l55"]
[ext_resource type="Texture2D" uid="uid://onyppw47aohd" path="res://addons/grass_01_1k/grass_01_color_1k.png" id="10_vut15"]
[ext_resource type="PackedScene" uid="uid://bhtssm61hr1oa" path="res://Scenes/Things/Tree_patch.tscn" id="11_5yaip"]
[ext_resource type="Texture2D" uid="uid://qdvsiqbn8t8j" path="res://addons/grass_01_1k/grass_01_height_1k.png" id="11_ri4wx"]
[ext_resource type="PackedScene" uid="uid://b22h7bntvg4m" path="res://Scenes/Things/EndHole.tscn" id="11_xchqm"]
[ext_resource type="PackedScene" uid="uid://bkwxxemjwp3j3" path="res://Scenes/Things/Tree_patch_small.tscn" id="12_pk2no"]
[ext_resource type="Script" path="res://Scenes/level_timer.gd" id="15_ii32u"]
[ext_resource type="PackedScene" uid="uid://cjcfmf62caywa" path="res://Scenes/UI/EndLevelDisplay.tscn" id="16_jjmje"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_h4v3f"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_xfhbd"]
seamless = true
noise = SubResource("FastNoiseLite_h4v3f")

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_umsuk"]
sky_top_color = Color(0.207954, 0.469072, 0.677961, 1)
sky_horizon_color = Color(0.416077, 0.709891, 0.750307, 1)
sky_cover = SubResource("NoiseTexture2D_xfhbd")
ground_bottom_color = Color(0.274025, 0.205125, 0.127106, 1)
ground_horizon_color = Color(0.59956, 0.68531, 0.5716, 1)

[sub_resource type="Sky" id="Sky_v3jsr"]
sky_material = SubResource("ProceduralSkyMaterial_umsuk")

[sub_resource type="Environment" id="Environment_yp03c"]
background_mode = 2
sky = SubResource("Sky_v3jsr")
ambient_light_source = 3
reflected_light_source = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7gnhl"]
albedo_texture = ExtResource("10_vut15")
heightmap_enabled = true
heightmap_texture = ExtResource("11_ri4wx")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u064i"]

[sub_resource type="PlaneMesh" id="PlaneMesh_mawl7"]
material = SubResource("StandardMaterial3D_u064i")
size = Vector2(20, 20)

[sub_resource type="BoxShape3D" id="BoxShape3D_df3di"]
size = Vector3(100, 1, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_o0v24"]
size = Vector3(100, 50, 1)

[node name="SceneBase" instance=ExtResource("1_p4omq")]
script = ExtResource("2_nmgh6")

[node name="LeftHand" parent="XROrigin3D" index="1"]
pose = &"default"

[node name="LeftHand" parent="XROrigin3D/LeftHand" index="0" instance=ExtResource("2_b63d7")]

[node name="FunctionTeleport" parent="XROrigin3D/LeftHand" index="1" instance=ExtResource("3_k8npn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.000692785)
rotation_action = ""

[node name="MovementTurn" parent="XROrigin3D/LeftHand" index="2" instance=ExtResource("4_y8n25")]

[node name="UiDisplay" parent="XROrigin3D/LeftHand" index="3" instance=ExtResource("6_gbv02")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.04, -0.05, 0.3)

[node name="RightHand" parent="XROrigin3D" index="2"]
pose = &"default"

[node name="RightHand" parent="XROrigin3D/RightHand" index="0" instance=ExtResource("5_wrtkv")]

[node name="FunctionPickup" parent="XROrigin3D/RightHand" index="1" instance=ExtResource("6_c2qen")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00246549, 2.38419e-07, -0.00147319)
ranged_angle = 20.0
impulse_factor = 4.0

[node name="FunctionPointer" parent="XROrigin3D/RightHand" index="2" instance=ExtResource("9_cj5nx")]
laser_length = 1

[node name="PlayerBody" parent="XROrigin3D" index="3" instance=ExtResource("7_ccdse")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." index="1"]
transform = Transform3D(0.618854, 0.478462, -0.622972, -0.3372, 0.878108, 0.339444, 0.709448, 0, 0.704758, -5, 3, 2)
light_energy = 0.111

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="2"]
environment = SubResource("Environment_yp03c")

[node name="Floor" type="StaticBody3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.427, 0, -27.3416)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor" index="0"]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 5, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_7gnhl")
mesh = SubResource("PlaneMesh_mawl7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_df3di")

[node name="Dysk" parent="." index="4" instance=ExtResource("10_p2l55")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.27326, 0.182968, -1.89842)

[node name="Hole" parent="." index="5" instance=ExtResource("11_xchqm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 47.5651, 0, -1.58966)

[node name="Trees" type="Node3D" parent="." index="6"]

[node name="TreePatch" parent="Trees" index="0" instance=ExtResource("11_5yaip")]
transform = Transform3D(-0.873772, 0, -0.486335, 0, 1, 0, 0.486335, 0, -0.873772, 12.8711, 0, 9.29459)

[node name="TreePatch2" parent="Trees" index="1" instance=ExtResource("11_5yaip")]
transform = Transform3D(-0.439939, 0, -0.898027, 0, 1, 0, 0.898027, 0, -0.439939, 36.0584, 0, 8.31655)

[node name="TreePatch3" parent="Trees" index="2" instance=ExtResource("11_5yaip")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.2144, 0, 10.6279)

[node name="TreePatch4" parent="Trees" index="3" instance=ExtResource("11_5yaip")]
transform = Transform3D(0.919135, 0, -0.393942, 0, 1, 0, 0.393942, 0, 0.919135, -10.0682, 0, -11.7265)

[node name="TreePatch5" parent="Trees" index="4" instance=ExtResource("11_5yaip")]
transform = Transform3D(-0.439939, 0, -0.898028, 0, 1, 0, 0.898028, 0, -0.439939, 57.1009, 0, 10.3865)

[node name="TreePatch6" parent="Trees" index="5" instance=ExtResource("11_5yaip")]
transform = Transform3D(0.528438, 0, -0.848972, 0, 1, 0, 0.848972, 0, 0.528438, 22.9861, 0, -8.64262)

[node name="TreePatch7" parent="Trees" index="6" instance=ExtResource("11_5yaip")]
transform = Transform3D(0.919135, 0, -0.393942, 0, 1, 0, 0.393942, 0, 0.919135, 62.188, 0, -9.38027)

[node name="TreePatch8" parent="Trees" index="7" instance=ExtResource("11_5yaip")]
transform = Transform3D(0.919135, 0, -0.393942, 0, 1, 0, 0.393942, 0, 0.919135, 60.947, 0, -31.9149)

[node name="TreePatch9" parent="Trees" index="8" instance=ExtResource("11_5yaip")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.7301, 0, -28.2045)

[node name="TreePatch10" parent="Trees" index="9" instance=ExtResource("11_5yaip")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.357, 0, -31.339)

[node name="TreePatch11" parent="Trees" index="10" instance=ExtResource("11_5yaip")]
transform = Transform3D(0.919135, 0, 0.393942, 0, 1, 0, -0.393942, 0, 0.919135, 31.5517, 0, -45.3332)

[node name="TreePatch12" parent="Trees" index="11" instance=ExtResource("11_5yaip")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.819, 0, -47.7198)

[node name="TreePatch13" parent="Trees" index="12" instance=ExtResource("11_5yaip")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.361, 0, -69.9482)

[node name="TreePatch14" parent="Trees" index="13" instance=ExtResource("11_5yaip")]
transform = Transform3D(-0.759271, 0, 0.650774, 0, 1, 0, -0.650774, 0, -0.759271, -17.22, 0, -51.973)

[node name="TreePatchSmall" parent="Trees" index="14" instance=ExtResource("12_pk2no")]
transform = Transform3D(-0.0505929, 0, 0.998719, 0, 1, 0, -0.998719, 0, -0.0505929, -21.8883, 0, -5.84391)

[node name="TreePatchSmall2" parent="Trees" index="15" instance=ExtResource("12_pk2no")]
transform = Transform3D(-0.0505929, 0, -0.998719, 0, 1, 0, 0.998719, 0, -0.0505929, -22.1006, 0, -19.3945)

[node name="TreePatchSmall3" parent="Trees" index="16" instance=ExtResource("12_pk2no")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9248, 0, -73.8051)

[node name="TreePatchSmall4" parent="Trees" index="17" instance=ExtResource("12_pk2no")]
transform = Transform3D(-0.981627, 0, 0.190809, 0, 1, 0, -0.190809, 0, -0.981627, 13.0507, 0, -74.8655)

[node name="TreePatch15" parent="Trees" index="18" instance=ExtResource("11_5yaip")]
transform = Transform3D(0.919135, 0, -0.393942, 0, 1, 0, 0.393942, 0, 0.919135, 60.9231, 0, -54.0896)

[node name="TreePatchSmall5" parent="Trees" index="19" instance=ExtResource("12_pk2no")]
transform = Transform3D(-0.0505929, 0, -0.998719, 0, 1, 0, 0.998719, 0, -0.0505929, 32.1683, 0, -24.3237)

[node name="TreePatchSmall6" parent="Trees" index="20" instance=ExtResource("12_pk2no")]
transform = Transform3D(0.201078, 0, -0.979575, 0, 1, 0, 0.979575, 0, 0.201078, 43.8361, 0, -15.9412)

[node name="TreePatchSmall7" parent="Trees" index="21" instance=ExtResource("12_pk2no")]
transform = Transform3D(-0.95424, 0, -0.299041, 0, 1, 0, 0.299041, 0, -0.95424, 22.7175, 0, -60.5819)

[node name="TreePatch16" parent="Trees" index="22" instance=ExtResource("11_5yaip")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 27.8851, 0, -77.1092)

[node name="TreePatch17" parent="Trees" index="23" instance=ExtResource("11_5yaip")]
transform = Transform3D(0.979575, 0, -0.201078, 0, 1, 0, 0.201078, 0, 0.979575, 49.8366, 0, -70.5217)

[node name="TreePatchSmall8" parent="Trees" index="24" instance=ExtResource("12_pk2no")]
transform = Transform3D(0.688355, 0, -0.725374, 0, 1, 0, 0.725374, 0, 0.688355, 66.2231, 0, -66.9317)

[node name="TreePatchSmall9" parent="Trees" index="25" instance=ExtResource("12_pk2no")]
transform = Transform3D(-0.994881, 0, 0.101056, 0, 1, 0, -0.101056, 0, -0.994881, 1.03764, 0, -69.2461)

[node name="LevelTimer" type="Node" parent="." index="7"]
script = ExtResource("15_ii32u")

[node name="EndLevelDisplay" parent="." index="8" instance=ExtResource("16_jjmje")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 47.4763, 1.30851, -0.503823)
visible = false

[node name="OutOfBoundsWalls" type="Node3D" parent="." index="9"]

[node name="StaticBody3D" type="StaticBody3D" parent="OutOfBoundsWalls" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, -25)

[node name="CollisionShape3D" type="CollisionShape3D" parent="OutOfBoundsWalls/StaticBody3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 45)
shape = SubResource("BoxShape3D_o0v24")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="OutOfBoundsWalls/StaticBody3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50)
shape = SubResource("BoxShape3D_o0v24")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="OutOfBoundsWalls/StaticBody3D" index="2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 50, 0, 0)
shape = SubResource("BoxShape3D_o0v24")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="OutOfBoundsWalls/StaticBody3D" index="3"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -50, 0, 0)
shape = SubResource("BoxShape3D_o0v24")

[connection signal="update_throws" from="." to="XROrigin3D/LeftHand/UiDisplay" method="_on_scene_base_update_throws"]
[connection signal="update_timer" from="." to="XROrigin3D/LeftHand/UiDisplay" method="_on_scene_base_update_timer"]
[connection signal="dropped" from="Dysk" to="." method="_on_dysk_dropped"]
[connection signal="grabbed" from="Dysk" to="." method="_on_dysk_grabbed"]
[connection signal="highlight_updated" from="Dysk" to="." method="_on_dysk_highlight_updated"]
[connection signal="picked_up" from="Dysk" to="." method="_on_dysk_picked_up"]
[connection signal="disk_fell_in" from="Hole" to="." method="_on_hole_disk_fell_in"]
